Updating Node version

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mytask2022",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "15.x"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
