--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "15.14.0",
+    "node": "14.x",
     "npm": "7.20.5"
   },
   "dependencies": {
