--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "npm run start",
+    "build": "npm run  build",
+    "test": "npm run test",
+    "eject": "npm run eject"
   },
   "eslintConfig": {
     "extends": [
