--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "14.x",
+    "node": "15.14.0",
     "npm": "7.20.5"
   },
   "dependencies": {
@@ -17,10 +17,10 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "npm run start",
-    "build": "npm run  build",
-    "test": "npm run test",
-    "eject": "npm run eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
